--- a/drift.ipynb
+++ b/drift.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -16,6 +16,10 @@
     "import requests\n",
     "import random\n",
     "import collections\n",
+    "import datetime\n",
+    "import pytz\n",
+    "import itertools\n",
+    "import numpy as np\n",
     "from typing import Any\n",
     "\n",
     "\n",
@@ -32,17 +36,24 @@
     "\n",
     "from neomodel import StructuredRel, DateProperty\n",
     "from neomodel import (StructuredNode, StringProperty, IntegerProperty,\n",
-    "                      UniqueIdProperty, RelationshipTo, BooleanProperty)\n",
+    "                      UniqueIdProperty, RelationshipTo, BooleanProperty, RelationshipFrom, \n",
+    "                      One, OneOrMore, ZeroOrMore, ZeroOrOne)\n",
     "from neomodel import db, config\n",
-    "\n",
-    "config.DATABASE_URL = 'bolt://neo4j:123456@114.213.213.163:7687'\n",
     "\n",
     "ModelBase = declarative_base()\n",
     "\n",
-    "TEXT_DB = {'url': 'mysql+pymysql://awen:123456@114.213.213.163/DispatchDatabase?charset=utf8mb4',\n",
+    "\n",
+    "TEXT_DB = {'url': 'mysql+pymysql://root:231519@127.0.0.1/DispatchDatabase?charset=utf8mb4',\n",
     "            'echo': True,\n",
     "            'pool_size': 10,\n",
     "            'max_overflow': 10, 'connect_args':{'connect_timeout': 10}}\n",
+    "config.DATABASE_URL = 'bolt://neo4j:123456@127.0.0.1:7687'\n",
+    "\n",
+    "# TEXT_DB = {'url': 'mysql+pymysql://awen:231519@114.213.213.163/DispatchDatabase?charset=utf8mb4',\n",
+    "#             'echo': True,\n",
+    "#             'pool_size': 10,\n",
+    "#             'max_overflow': 10, 'connect_args':{'connect_timeout': 10}}\n",
+    "# config.DATABASE_URL = 'bolt://neo4j:123456@114.213.213.163:7687'\n",
     "\n",
     "\n",
     "engine = create_engine(**TEXT_DB)\n",
@@ -98,17 +109,13 @@
     "\n",
     "    name = Column('name', String(length=20))\n",
     "\n",
-    "    weight_lower = Column('weight_limit_lower', FLOAT)\n",
-    "    weight_upper = Column('weight_limit_upper', FLOAT)\n",
+    "    weight = Column('weight', FLOAT)\n",
     "\n",
-    "    height_upper = Column('height_limit_upper', FLOAT)\n",
-    "    height_lower = Column('height_limit_lower', FLOAT)\n",
+    "    height = Column('height', FLOAT)\n",
     "\n",
-    "    width_upper = Column('width_limit_upper', FLOAT)\n",
-    "    width_lower = Column('width_limit_lower', FLOAT)\n",
+    "    width = Column('width', FLOAT)\n",
     "\n",
-    "    length_upper = Column('length_limit_upper', FLOAT)\n",
-    "    length_lower = Column('length_limit_lower', FLOAT)\n",
+    "    length = Column('length', FLOAT)\n",
     "\n",
     "    code = Column('code', Integer, ForeignKey(\"table_material_standard.minor_category_code\"))\n",
     "\n",
@@ -217,17 +224,22 @@
    },
    "outputs": [],
    "source": [
-    "class Material_Include(StructuredRel):\n",
-    "    on_date = DateProperty()\n",
+    "class Material_Reserved(StructuredRel):\n",
+    "    on_date = DateProperty(default=lambda: datetime.now(pytz.utc))\n",
+    "    num_unssign = IntegerProperty(label='num_unssign')\n",
+    "    num_assign = IntegerProperty(label='num_assign')\n",
+    "\n",
+    "    num_store = IntegerProperty(label='num_store')\n",
     "\n",
     "\n",
     "class Truck_Include(StructuredRel):\n",
-    "    on_date = DateProperty()"
+    "    on_date = DateProperty(default=lambda: datetime.now(pytz.utc))\n",
+    "    num_truck = IntegerProperty(label='num_truck')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -242,16 +254,20 @@
     "    material_id = IntegerProperty(unique_index=True, required=True, label='material_id')\n",
     "\n",
     "    name = StringProperty(label='material_name')\n",
-    "    num_unssign = IntegerProperty(label='num_unssign')\n",
-    "    num_assign = IntegerProperty(label='num_assign')\n",
+    "    \n",
+    "    include_parent_material = RelationshipFrom('Material_Standard_Node', 'INCLUDE_MATERIAL', cardinality=ZeroOrOne)\n",
     "\n",
-    "    num_store = IntegerProperty(label='num_store')\n",
-    "\n",
-    "\n",
-    "class Truck_Node(StructuredNode):\n",
+    "class Material_Standard_Node(StructuredNode):\n",
     "    id = UniqueIdProperty()\n",
+    "    material_standard_id = IntegerProperty(unique_index=True, required=True, label='material_standard_id')\n",
+    "    name = StringProperty(label='material_stanard_name')\n",
     "\n",
-    "    license = StringProperty(unique_index=True, required=True, label='licence')\n",
+    "    include_material = RelationshipTo('Material_Node', 'INCLUDE_MATERIAL', cardinality=ZeroOrMore)\n",
+    "\n",
+    "    include_parent_material = RelationshipFrom('Material_Standard_Node', 'INCLUDE_STANDRAD_MATERIAL', cardinality=ZeroOrOne)\n",
+    "    include_standard_material = RelationshipTo('Material_Standard_Node', 'INCLUDE_STANDRAD_MATERIAL', cardinality=ZeroOrMore)\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "class District_Node(StructuredNode):\n",
@@ -279,14 +295,21 @@
     "    name = StringProperty(label='reserve_point_name')\n",
     "    is_allocated = BooleanProperty(label='is_allocated')\n",
     "\n",
-    "    include = RelationshipTo(\"Material_Node\", \"INCLUDE_MATERIAL\", model=Material_Include)\n",
+    "    include_material = RelationshipTo(\"Material_Node\", \"RESERVED_MATERIAL\", model=Material_Reserved)\n",
     "\n",
-    "    include_truck = RelationshipTo(\"Truck_Node\", \"INCLUDE_TRUCK\", model=Truck_Include)\n"
+    "    include_truck = RelationshipTo(\"Truck_Node\", \"INCLUDE_TRUCK\", model=Truck_Include, cardinality=ZeroOrMore)\n",
+    "\n",
+    "class Truck_Node(StructuredNode):\n",
+    "    id = UniqueIdProperty()\n",
+    "\n",
+    "    licence = StringProperty(label='licence')\n",
+    "\n",
+    "    point = RelationshipFrom('Reserve_Point_Node', \"INCLUDE_TRUCK\", model=Truck_Include, cardinality=ZeroOrOne)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -324,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -345,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -379,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -491,7 +514,7 @@
    },
    "outputs": [],
    "source": [
-    "count = 3335\n",
+    "count = 5105\n",
     "url = 'https://restapi.amap.com/v3/config/district?keywords={0}&subdistrict={1}&extensions={2}&key=3e19f5f961950154c93a2a9f1cc902e7'\n",
     "def create_district_standard(session, parent, node):\n",
     "    global count\n",
@@ -653,16 +676,17 @@
    "source": [
     "Medium = collections.namedtuple('Medium','code name')\n",
     "Major = collections.namedtuple('Major', 'code name')\n",
+    "Minor = collections.namedtuple('Minor', 'name code mediumcode majorcode')\n",
     "medium_sets = set()\n",
     "major_sets = set()\n",
+    "minor_sets = set()\n",
     "with get_session() as s:\n",
     "    sql = select(Material_Standard)\n",
     "    rs = s.execute(sql).scalars().all()\n",
     "    for r in rs:\n",
     "        medium_sets.add(Medium(code=r.medium_code, name=r.medium_name))\n",
     "        major_sets.add(Major(code=r.major_code, name=r.major_name))\n",
-    "print(major_sets)\n",
-    "print(medium_sets)      "
+    "        minor_sets.add(Minor(name=r.minor_name, code=r.minor_code, mediumcode=r.medium_code, majorcode=r.major_code))"
    ]
   },
   {
@@ -674,10 +698,159 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "major_weight = {1000000: 6, 2000000: 3, 3000000: 1}\n",
+    "medium_weight ={medium.code:1 for medium in medium_sets}\n",
+    "major_weight = {minor:1 for minor in minor_sets}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3.在已知的储备点生成数据  \n",
+    "***\n",
+    "    * 先生成货车数据，物资code:2040202  \n",
+    "        * 将货车分为四种:微型，轻型，中型，重型\n",
+    "        * 生成三种货车数据，额定载重和货箱长宽高数据\n",
+    "        * 将随机选择一个储备点的城市，将货车数据挂在上面\n",
+    "    * 先生成minor小类的长宽高数据  \n",
+    "    * 在每个储备点生成数据  \n",
+    "        * 先按照权重选择数据和数量，并生成实时需求等级  \n",
+    "        * 插入图数据库，加上并加入日期属性  "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#模拟物资长，宽，高，重量数据\n",
+    "def standard_gauss(num, len_candicate, sigma=1):\n",
+    "    def _generate():\n",
+    "        ans = random.gauss(0, sigma)\n",
+    "        while ans <= 0:\n",
+    "            ans = random.gauss(0, sigma)\n",
+    "        return ans\n",
+    "    index = [_generate() for i in range(num)]\n",
+    "    max_index = max(index)\n",
+    "    min_index = min(index)\n",
+    "    index = [((i - min_index) / (max_index - min_index)) * len_candicate for i in index]\n",
+    "    return index\n",
+    "    \n",
+    "len_candicate = 20\n",
+    "length_candicate = sorted(standard_gauss(num=len_candicate+2, len_candicate=3.5, sigma=5))[1:-1]\n",
+    "height_candicate = sorted(standard_gauss(num=len_candicate+2, len_candicate=1.5, sigma=5))[1:-1]\n",
+    "width_candicate = sorted(standard_gauss(num=len_candicate+2, len_candicate=1, sigma=5))[1:-1]\n",
+    "\n",
+    "with get_session() as s:\n",
+    "    sql = select(Material_Standard)\n",
+    "    rs = s.execute(sql).scalars().all()\n",
+    "    num = len(rs)\n",
+    "    \n",
+    "    index_height = standard_gauss(num=num, len_candicate=len_candicate-1)\n",
+    "    index_width = standard_gauss(num=num, len_candicate=len_candicate-1)\n",
+    "    index_length = standard_gauss(num=num, len_candicate=len_candicate-1)\n",
+    "\n",
+    "    index_height = [int(i) for i in index_height]\n",
+    "    index_width = [int(i) for i in index_width]\n",
+    "    index_length = [int(i) for i in index_length]\n",
+    "\n",
+    "    count = 0\n",
+    "    for r in rs:\n",
+    "        height = height_candicate[index_height[count]]\n",
+    "        width = width_candicate[index_width[count]]\n",
+    "        length = length_candicate[index_length[count]]\n",
+    "        weight = height * width * length * 1000\n",
+    "        s.add(Material(id=count, name=r.minor_name, code=r.minor_code, weight=weight, length=length, \n",
+    "        width = width, height = height))\n",
+    "        count = count + 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#将物资存入图数据库中\n",
+    "@db.transaction\n",
+    "def c_or_u_material():\n",
+    "    #创建点\n",
+    "    for node in itertools.chain(major_sets, medium_sets, minor_sets):\n",
+    "        Material_Standard_Node.create_or_update({'material_standard_id':node.code, 'name':node.name})\n",
+    "    \n",
+    "    for node in minor_sets:\n",
+    "        point = Material_Standard_Node.nodes.get_or_none(material_standard_id = node.code)\n",
+    "        last_point = Material_Standard_Node.nodes.get_or_none(material_standard_id = node.mediumcode)\n",
+    "        last_last_point = Material_Standard_Node.nodes.get_or_none(material_standard_id = node.majorcode)\n",
+    "\n",
+    "        if last_last_point.include_standard_material.relationship(last_point) is  None:\n",
+    "            last_last_point.include_standard_material.connect(last_point)\n",
+    "\n",
+    "        if last_point.include_standard_material.relationship(point) is  None:\n",
+    "            last_point.include_standard_material.connect(point)\n",
+    "    \n",
+    "    with get_session() as s:\n",
+    "        sql = select(Material)\n",
+    "        rs = s.execute(sql).scalars().all()\n",
+    "\n",
+    "        for r in rs:\n",
+    "            node = Material_Node.create_or_update({'material_id': r.id, 'name': r.name})\n",
+    "            node = node[0] if isinstance(node, list) else node\n",
+    "            node_standard = Material_Standard_Node.nodes.get_or_none(material_standard_id = r.code)\n",
+    "\n",
+    "            if node_standard.include_material.relationship(node) is None:\n",
+    "                node_standard.include_material.connect(node)\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#随机抽取一个储备点，模拟物资\n",
+    "@db.transaction\n",
+    "def samulate_reserve_point__material(num = 1, material_size = 50):\n",
+    "    reservePointNodes = Reserve_Point_Node.nodes.all()\n",
+    "\n",
+    "    reservePointNode = random.choice(reservePointNodes)\n",
+    "\n",
+    "    materialNodes = Material_Node.nodes.all()\n",
+    "    materialWeights = []\n",
+    "    with get_session() as s:\n",
+    "        for node in materialNodes:\n",
+    "            sql = select(Material).where(Material.id == node.material_id)\n",
+    "            rs = s.execute(sql).scalars().all()\n",
+    "            for r in rs:\n",
+    "                materialWeights.append(r.weight)\n",
+    "    maxWeight = max(materialWeights)\n",
+    "    materialWeights = [1/i for i in materialWeights]\n",
+    "    materialNodes = np.random.choice(materialNodes, size=material_size, replace=False, p=materialWeights)\n",
+    "\n",
+    "    materialWeights = [int(w * maxWeight) for w in materialWeights]\n",
+    "    count = 0\n",
+    "    for node in materialNodes:\n",
+    "        if reservePointNode.include_material.relationship(node) is None:\n",
+    "            rel = reservePointNode.include_material.connect(node, {'num_store': materialWeights[count], 'num_unssign':materialWeights[count], 'num_assign': 0})\n",
+    "        \n",
+    "        count = count + 1\n",
+    "    with get_session() as s:\n",
+    "        sql = select(Truck)\n",
+    "        rs = s.execute(sql).scalars().all()\n",
+    "        for r in rs:\n",
+    "            node = Truck_Node.create_or_update({'licence':r.licence})\n",
+    "            node = node[0] if isinstance(node, list) else node\n",
+    "            if reservePointNode.include_truck.relationship(node) is None:\n",
+    "                reservePointNode.include_truck.connect(node, {'num_truck':3})\n",
+    "    \n"
+   ]
   }
  ],
  "metadata": {
