--- a/drift.ipynb
+++ b/drift.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -16,11 +16,11 @@
     "import requests\n",
     "import random\n",
     "import collections\n",
-    "import datetime\n",
     "import pytz\n",
     "import itertools\n",
     "import numpy as np\n",
     "from typing import Any\n",
+    "from datetime import datetime\n",
     "\n",
     "\n",
     "from sqlalchemy import create_engine\n",
@@ -43,17 +43,17 @@
     "ModelBase = declarative_base()\n",
     "\n",
     "\n",
-    "TEXT_DB = {'url': 'mysql+pymysql://root:231519@127.0.0.1/DispatchDatabase?charset=utf8mb4',\n",
-    "            'echo': True,\n",
-    "            'pool_size': 10,\n",
-    "            'max_overflow': 10, 'connect_args':{'connect_timeout': 10}}\n",
-    "config.DATABASE_URL = 'bolt://neo4j:123456@127.0.0.1:7687'\n",
-    "\n",
-    "# TEXT_DB = {'url': 'mysql+pymysql://awen:231519@114.213.213.163/DispatchDatabase?charset=utf8mb4',\n",
+    "# TEXT_DB = {'url': 'mysql+pymysql://root:231519@127.0.0.1/DispatchDatabase?charset=utf8mb4',\n",
     "#             'echo': True,\n",
     "#             'pool_size': 10,\n",
     "#             'max_overflow': 10, 'connect_args':{'connect_timeout': 10}}\n",
-    "# config.DATABASE_URL = 'bolt://neo4j:123456@114.213.213.163:7687'\n",
+    "# config.DATABASE_URL = 'bolt://neo4j:123456@127.0.0.1:7687'\n",
+    "\n",
+    "TEXT_DB = {'url': 'mysql+pymysql://awen:123456@114.213.213.163/DispatchDatabase?charset=utf8mb4',\n",
+    "            'echo': True,\n",
+    "            'pool_size': 10,\n",
+    "            'max_overflow': 10, 'connect_args':{'connect_timeout': 10}}\n",
+    "config.DATABASE_URL = 'bolt://neo4j:123456@114.213.213.163:7687'\n",
     "\n",
     "\n",
     "engine = create_engine(**TEXT_DB)\n",
@@ -698,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -806,7 +806,8 @@
     "\n",
     "            if node_standard.include_material.relationship(node) is None:\n",
     "                node_standard.include_material.connect(node)\n",
-    "        "
+    "\n",
+    "c_or_u_material()   "
    ]
   },
   {
@@ -817,11 +818,11 @@
    "source": [
     "#随机抽取一个储备点，模拟物资\n",
     "@db.transaction\n",
-    "def samulate_reserve_point__material(num = 1, material_size = 50):\n",
+    "def samulate_reserve_point_material(num = 1, material_size = 50):\n",
     "    reservePointNodes = Reserve_Point_Node.nodes.all()\n",
     "\n",
-    "    reservePointNode = random.choice(reservePointNodes)\n",
-    "\n",
+    "    # reservePointNode = random.choice(reservePointNodes)\n",
+    "    reservePointNode = np.random.choice(reservePointNodes, size=num, replace=False)[0]\n",
     "    materialNodes = Material_Node.nodes.all()\n",
     "    materialWeights = []\n",
     "    with get_session() as s:\n",
@@ -831,10 +832,20 @@
     "            for r in rs:\n",
     "                materialWeights.append(r.weight)\n",
     "    maxWeight = max(materialWeights)\n",
+    "    \n",
     "    materialWeights = [1/i for i in materialWeights]\n",
-    "    materialNodes = np.random.choice(materialNodes, size=material_size, replace=False, p=materialWeights)\n",
+    "    sumWeight = sum(materialWeights)\n",
+    "    weightsample = [i/sumWeight for i in materialWeights]\n",
+    "    materialNodes = np.random.choice(materialNodes, size=material_size, replace=False, p=weightsample)\n",
     "\n",
-    "    materialWeights = [int(w * maxWeight) for w in materialWeights]\n",
+    "    # materialWeights = [int(w * maxWeight /3) for w in materialWeights]\n",
+    "    _temp = []\n",
+    "    for w in materialWeights:\n",
+    "        _num = int(w * maxWeight /5)\n",
+    "        if _num == 0:\n",
+    "            _num =1\n",
+    "        _temp.append(_num)\n",
+    "    materialWeights = _temp\n",
     "    count = 0\n",
     "    for node in materialNodes:\n",
     "        if reservePointNode.include_material.relationship(node) is None:\n",
@@ -849,13 +860,15 @@
     "            node = node[0] if isinstance(node, list) else node\n",
     "            if reservePointNode.include_truck.relationship(node) is None:\n",
     "                reservePointNode.include_truck.connect(node, {'num_truck':3})\n",
-    "    \n"
+    "    \n",
+    "\n",
+    "samulate_reserve_point_material()"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.13 ('neo4j')",
+   "display_name": "Python 3.8.15 ('neo4j')",
    "language": "python",
    "name": "python3"
   },
@@ -874,7 +887,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "ccf777005d3aa2fe2549a342582b0087bc81c1cfdb2410cf490150de4bd1b3bc"
+    "hash": "3e9afa2b40254c70f312624f5042366ac5e840469929e7e78b621fa3fa6ae754"
    }
   }
  },
