--- a/drift.ipynb
+++ b/drift.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -43,17 +43,17 @@
     "ModelBase = declarative_base()\n",
     "\n",
     "\n",
-    "# TEXT_DB = {'url': 'mysql+pymysql://root:231519@127.0.0.1/DispatchDatabase?charset=utf8mb4',\n",
-    "#             'echo': True,\n",
-    "#             'pool_size': 10,\n",
-    "#             'max_overflow': 10, 'connect_args':{'connect_timeout': 10}}\n",
-    "# config.DATABASE_URL = 'bolt://neo4j:123456@127.0.0.1:7687'\n",
-    "\n",
-    "TEXT_DB = {'url': 'mysql+pymysql://awen:123456@114.213.213.163/DispatchDatabase?charset=utf8mb4',\n",
+    "TEXT_DB = {'url': 'mysql+pymysql://root:231519@127.0.0.1/DispatchDatabase?charset=utf8mb4',\n",
     "            'echo': True,\n",
     "            'pool_size': 10,\n",
     "            'max_overflow': 10, 'connect_args':{'connect_timeout': 10}}\n",
-    "config.DATABASE_URL = 'bolt://neo4j:123456@114.213.213.163:7687'\n",
+    "config.DATABASE_URL = 'bolt://neo4j:123456@127.0.0.1:7687'\n",
+    "\n",
+    "# TEXT_DB = {'url': 'mysql+pymysql://awen:123456@114.213.213.163/DispatchDatabase?charset=utf8mb4',\n",
+    "#             'echo': True,\n",
+    "#             'pool_size': 10,\n",
+    "#             'max_overflow': 10, 'connect_args':{'connect_timeout': 10}}\n",
+    "# config.DATABASE_URL = 'bolt://neo4j:123456@114.213.213.163:7687'\n",
     "\n",
     "\n",
     "engine = create_engine(**TEXT_DB)\n",
@@ -698,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -714,13 +714,12 @@
     "3.在已知的储备点生成数据  \n",
     "***\n",
     "    * 先生成货车数据，物资code:2040202  \n",
-    "        * 将货车分为四种:微型，轻型，中型，重型\n",
+    "        * 将货车分为四种:微型，轻型，，重型\n",
     "        * 生成三种货车数据，额定载重和货箱长宽高数据\n",
-    "        * 将随机选择一个储备点的城市，将货车数据挂在上面\n",
-    "    * 先生成minor小类的长宽高数据  \n",
-    "    * 在每个储备点生成数据  \n",
-    "        * 先按照权重选择数据和数量，并生成实时需求等级  \n",
-    "        * 插入图数据库，加上并加入日期属性  "
+    "    * 先生成物资小类的长宽高数据  \n",
+    "        * 高斯分布\n",
+    "    * 选取一个储备点生成储备点的物资数据  \n",
+    "        * 先按照物资重量权重生成数量"
    ]
   },
   {
@@ -887,7 +886,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "3e9afa2b40254c70f312624f5042366ac5e840469929e7e78b621fa3fa6ae754"
+    "hash": "ccf777005d3aa2fe2549a342582b0087bc81c1cfdb2410cf490150de4bd1b3bc"
    }
   }
  },
