--- a/models_draft.ipynb
+++ b/models_draft.ipynb
@@ -15,12 +15,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "material = []\n",
+    "for i in range(1, 6):\n",
+    "    for j in range(i, 6):\n",
+    "        for k in range(j, 6):\n",
+    "            material.append([i, j, k])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "models."
+    "material"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
