--- a/models_draft.ipynb
+++ b/models_draft.ipynb
@@ -357,7 +357,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.15 ('neo4j')",
+   "display_name": "dispatch",
    "language": "python",
    "name": "python3"
   },
@@ -371,12 +371,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.15"
+   "version": "3.9.0"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "3e9afa2b40254c70f312624f5042366ac5e840469929e7e78b621fa3fa6ae754"
+    "hash": "02b9cf08303e661ec4f4845823fed3783ec0277ed1e5bce65418f7b1f6269cea"
    }
   }
  },
